src/objects/Zuora__TaxationItem__c.object
<CustomObject>
    <fields>
        <fullName>Zuora__AccountingCode__c</fullName>
        <description>The accounting code for the taxation item.</description>
        <label>AccountingCode</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zuora__CreatedById__c</fullName>
        <description>The ID of the user who created the taxation item.</description>
        <label>CreatedById</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zuora__CreatedDate__c</fullName>
        <description>The date when the payment was created in the Zuora system.</description>
        <label>CreatedDate</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Zuora__ExemptAmount__c</fullName>
        <description>The amount of taxes or VAT for which the customer has an exemption.</description>
        <label>ExemptAmount</label>
        <precision>18</precision>
        <scale>9</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Zuora__External_Id__c</fullName>
        <description>The ID of this object. Upon creation, the ID of this object is TaxationItemId.</description>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zuora__Invoice_Item__c</fullName>
        <deleteConstraint>Cascade</deleteConstraint>
        <description>The ID of the specific invoice item that the taxation information applies to.</description>
        <label>Invoice Item</label>
        <referenceTo>Zuora__InvoiceItem__c</referenceTo>
        <relationshipLabel>TaxationItems</relationshipLabel>
        <relationshipName>TaxationItems</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Zuora__Jurisdiction__c</fullName>
        <description>The jurisdiction that applies the tax or VAT. This value is typically a state, province, county, or city.</description>
        <label>Jurisdiction</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zuora__LocationCode__c</fullName>
        <description>The identifier for the location based on the value of the TaxCode field.</description>
        <label>LocationCode</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zuora__TaxAmount__c</fullName>
        <description>The amount of the tax applied to the charge.</description>
        <label>TaxAmount</label>
        <precision>18</precision>
        <required>true</required>
        <scale>9</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Zuora__TaxCodeDescription__c</fullName>
        <description>The description for the tax code.</description>
        <label>TaxCodeDescription</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zuora__TaxCode__c</fullName>
        <description>The tax code identifies which tax rules and tax rates to apply to a specific charge.</description>
        <label>TaxCode</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zuora__TaxDate__c</fullName>
        <description>The date that the tax is applied to the charge.</description>
        <label>TaxDate</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Zuora__TaxRateDescription__c</fullName>
        <description>The description of the tax rate.</description>
        <label>TaxRateDescription</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zuora__TaxRateType__c</fullName>
        <description>The type of the tax rate applied to the charge.</description>
        <label>TaxRateType</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zuora__TaxRate__c</fullName>
        <description>The tax rate applied to the charge.</description>
        <label>TaxRate</label>
        <precision>18</precision>
        <required>true</required>
        <scale>9</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Zuora__UpdatedById__c</fullName>
        <description>The ID of the user who last updated the taxation item.</description>
        <label>UpdatedById</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zuora__UpdatedDate__c</fullName>
        <description>The date when the taxation item was last updated.</description>
        <label>UpdatedDate</label>
        <type>DateTime</type>
    </fields>
    <label>Taxation Item</label>
    <nameField>
        <label>Taxation Item Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Taxation Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>